# scheduler

./: .env.example  Cargo.toml  README.md
.github/workflows/: release.yml
migrations/: 20251209003438_create_users_table.up.sql  20251209014804_create_refresh_tokens.up.sql  20251220043446_fetch_api.up.sql  20260103124730_apalis_extensions.up.sql  20260103124740_apalis_schema.up.sql  20260103124748_apalis_tables.up.sql  20260103124804_apalis_functions.up.sql  20260103124833_apalis_indexes_triggers.up.sql  20260121003612_user_api_keys.up.sql
src/: lib.rs  main.rs  response.rs  state.rs
src/config/: mod.rs
src/db/: postgres.rs
src/handlers/: auth.rs  fetch.rs  mod.rs  scheduler.rs  user.rs
src/jobs/: email_jobs.rs  mod.rs  rest.rs  workers.rs
src/middleware/: auth.rs
src/models/: auth.rs  fetch.rs  user.rs
src/repositories/: fetch.rs  token.rs  user.rs
src/repository/: fetch.rs  mod.rs
src/routes/: auth.rs  fetch.rs  mod.rs  scheduler.rs  user.rs
src/services/: auth.rs  fetch.rs  mod.rs  scheduler.rs  user.rs
src/utils/: auth.rs  mod.rs  requests.rs  response.rs
tests/: gen.rs
