[package]
name = "scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
dotenvy = "0.15.7"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6", features = ["trace" , "cors", "compression-gzip"] }
argon2 = "0.5"
password-hash = "0.5"
rand = "0.8"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
uuid = { version = "1.0", features = ["v4","v7", "fast-rng", "macro-diagnostics"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
anyhow = "1.0.100"

[dev-dependencies]
axum-test = "18.2.1"
